--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -15,7 +15,7 @@
     <title>Coffee House</title>
   </head>
   <body>
-    <!-- <div class="main-container">
+    <div class="main-container">
       <header class="main-header">
         <div class="container">
           <span class="logo">
@@ -37,13 +37,13 @@
         </div>
         </div>
       </header>
-      <section class="enjoy">
+      <!-- <section class="enjoy">
         <div class="container">
             <h1 class="primary-heading">Enjoy premium coffee at our charming cafe</h1>
             <p class="description">With its inviting atmosphere and delicious coffee options, the Coffee House Resource is a popular destination for coffee lovers and those seeking a warm and inviting space to enjoy their favorite beverage.</p>
             <button class="primary-button">Menu</button>
         </div>
-      </section>
-    </div> -->
+      </section> -->
+    </div>
   </body>
 </html>
