--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -34,14 +34,95 @@
               <span>Menu</span>
               <img src="./assets/img/coffee-cup.svg" width="20" height="20" />
             </a>
-        </div>
+          </div>
         </div>
       </header>
       <section class="enjoy">
         <div class="container">
-            <h1 class="primary-heading"><span>Enjoy</span> premium coffee at our charming cafe</h1>
-            <p class="description">With its inviting atmosphere and delicious coffee options, the Coffee House Resource is a popular destination for coffee lovers and those seeking a warm and inviting space to enjoy their favorite beverage.</p>
-            <button class="button-primary">Menu</button>
+          <h1 class="heading-primary">
+            <span>Enjoy</span> premium coffee at our charming cafe
+          </h1>
+          <p class="description">
+            With its inviting atmosphere and delicious coffee options, the
+            Coffee House Resource is a popular destination for coffee lovers and
+            those seeking a warm and inviting space to enjoy their favorite
+            beverage.
+          </p>
+          <button class="button-primary">Menu</button>
+        </div>
+      </section>
+      <section class="favourites-coffee">
+        <h2 class="heading-secondary">
+          Choose your <span>favorite</span> coffee
+        </h2>
+        <div class="slider">
+          <ul class="list">
+            <li class="item">
+              <div class="content">
+                <img src="./assets/img/coffee-slider-1.png" alt="" />
+                <h3 class="product-title">S’mores Frappuccino</h3>
+                <p class="product-description">
+                  This new drink takes an espresso and mixes it with brown sugar
+                  and cinnamon before being topped with oat milk.
+                </p>
+                <p class="product-price">$5.50</p>
+              </div>
+            </li>
+          </ul>
+          <div class="arrows">
+            <div class="control left">
+              <button type="button" class="arrow --prev left">
+                <svg
+                  width="60"
+                  height="60"
+                  viewBox="0 0 60 60"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <rect
+                    x="0.5"
+                    y="0.5"
+                    width="59"
+                    height="59"
+                    rx="29.5"
+                    stroke="#665F55"
+                  />
+                  <path
+                    d="M36.5 30H24M24 30L30 24M24 30L30 36"
+                    stroke="#403F3D"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </button>
+            </div>
+            <div class="control right">
+              <button type="button" class="arrow --next right">
+                <svg
+                  width="60"
+                  height="60"
+                  viewBox="0 0 60 60"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <rect
+                    x="0.5"
+                    y="0.5"
+                    width="59"
+                    height="59"
+                    rx="29.5"
+                    stroke="#665F55"
+                  />
+                  <path
+                    d="M24 30H36.5M36.5 30L30.5 24M36.5 30L30.5 36"
+                    stroke="#403F3D"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </button>
+            </div>
+          </div>
         </div>
       </section>
     </div>
