feat: add about section

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -125,6 +125,20 @@
           </div>
         </div>
       </section>
+      <section class="about">
+        <h2 class="heading-secondary">
+            Resource is <span>the perfect and cozy place</span> where you can enjoy a variety of hot beverages, relax, catch up with friends, or get some work done.
+        </h2>
+        <ul class="grid-container">
+            <div class="column">
+                <li class="grid-item lg"><img src="./assets/img/about-1.jpg"></li>
+                <li class="grid-item sm"><img src="./assets/img/about-2.jpg"></li>      
+            </div>
+            <div class="column">
+                <li class="grid-item sm"><img src="./assets/img/about-3.jpg"></li>
+                <li class="grid-item lg"><img src="./assets/img/about-4.jpg"></li>
+            </div>
+        </ul>
     </div>
   </body>
 </html>
