fix: add some adjustments according to w3c-validator

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -146,12 +146,12 @@
         </h2>
         <ul class="grid-container">
           <li class="column-1">
-            <div class="grid-item lg"><img src="./assets/img/about-1.jpg" /></div>
-            <div class="grid-item sm"><img src="./assets/img/about-2.jpg" /></div>
+            <div class="grid-item lg"><img src="./assets/img/about-1.jpg" alt=""></div>
+            <div class="grid-item sm"><img src="./assets/img/about-2.jpg" alt=""></div>
           </li>
           <li class="column-2">
-            <div class="grid-item sm"><img src="./assets/img/about-3.jpg" /></div>
-            <div class="grid-item lg"><img src="./assets/img/about-4.jpg" /></div>
+            <div class="grid-item sm"><img src="./assets/img/about-3.jpg" alt=""></div>
+            <div class="grid-item lg"><img src="./assets/img/about-4.jpg" alt=""></div>
           </li>
         </ul>
       </section>
