fix: remove hover effects on mobile devices && fix validation issues

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="stylesheet" href="./styles/normalize.css" />
-    <link rel="stylesheet" href="./styles/styles.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="./styles/normalize.css">
+    <link rel="stylesheet" href="./styles/styles.css">
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@400;500;700&display=swap"
       rel="stylesheet"
-    />
-    <link href="https://fonts.cdnfonts.com/css/inter" rel="stylesheet" />
-    <link rel="apple-touch-icon" sizes="20x20" href="favicon.png" />
-    <link rel="icon" type="image/png" sizes="20x20" href="favicon.png" />
+    >
+    <link href="https://fonts.cdnfonts.com/css/inter" rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="20x20" href="favicon.png">
+    <link rel="icon" type="image/png" sizes="20x20" href="favicon.png">
     <title>Coffee House</title>
   </head>
   <body>
@@ -21,7 +21,7 @@
       <header class="main-header">
         <div class="container">
           <span class="logo">
-            <img src="./assets/img/logo.png" alt="logo" />
+            <img src="./assets/img/logo.png" alt="logo" >
           </span>
           <div class="nav-toggle-block">
             <button class="nav-toggle-button">
@@ -55,7 +55,7 @@
                   alt="menu icon"
                   width="20"
                   height="20"
-                />
+                >
               </a>
             </div>
           </div>
@@ -126,7 +126,7 @@
           <ul class="list">
             <li class="item">
               <div class="content">
-                <img src="./assets/img/coffee-slider-1.png" alt="" />
+                <img src="./assets/img/coffee-slider-1.png" alt="" >
                 <h3 class="product-title">S’mores Frappuccino</h3>
                 <p class="product-description">
                   This new drink takes an espresso and mixes it with brown sugar
@@ -192,18 +192,18 @@
         <ul class="grid-container">
           <li class="column-1">
             <div class="grid-item lg">
-              <img src="./assets/img/about-1.jpg" alt="" />
+              <img src="./assets/img/about-1.jpg" alt="" >
             </div>
             <div class="grid-item sm">
-              <img src="./assets/img/about-2.jpg" alt="" />
+              <img src="./assets/img/about-2.jpg" alt="" >
             </div>
           </li>
           <li class="column-2">
             <div class="grid-item sm">
-              <img src="./assets/img/about-3.jpg" alt="" />
+              <img src="./assets/img/about-3.jpg" alt="" >
             </div>
             <div class="grid-item lg">
-              <img src="./assets/img/about-4.jpg" alt="" />
+              <img src="./assets/img/about-4.jpg" alt="" >
             </div>
           </li>
         </ul>
@@ -287,7 +287,7 @@
           </div>
         </div>
         <div class="picture">
-          <img src="./assets/img/mobile-screens.png" alt="mobile screens" />
+          <img src="./assets/img/mobile-screens.png" alt="mobile screens" >
         </div>
       </section>
       <footer class="main-footer" id="contacts">
