--- a/coffee-house/menu.html
+++ b/coffee-house/menu.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="stylesheet" href="./styles/normalize.css" />
-    <link rel="stylesheet" href="./styles/styles.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <link rel="preconnect" href="https://fonts.googleapis.com" >
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
+    <link rel="stylesheet" href="./styles/normalize.css" >
+    <link rel="stylesheet" href="./styles/styles.css" >
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@400;500;700&display=swap"
       rel="stylesheet"
-    />
-    <link href="https://fonts.cdnfonts.com/css/inter" rel="stylesheet" />
-    <link rel="apple-touch-icon" sizes="20x20" href="favicon.png" />
-    <link rel="icon" type="image/png" sizes="20x20" href="favicon.png" />
+    >
+    <link href="https://fonts.cdnfonts.com/css/inter" rel="stylesheet" >
+    <link rel="apple-touch-icon" sizes="20x20" href="favicon.png" >
+    <link rel="icon" type="image/png" sizes="20x20" href="favicon.png" >
     <title>Coffee House - Menu</title>
   </head>
   <body>
@@ -21,7 +21,7 @@
       <header class="main-header">
         <div class="container">
           <a href="index.html" class="logo">
-            <img src="./assets/img/logo.png" alt="logo" />
+            <img src="./assets/img/logo.png" alt="logo">
           </a>
           <div class="nav-toggle-block">
             <button class="nav-toggle-button">
@@ -77,14 +77,14 @@
               </ul>
             </nav>
             <div class="coffee-menu">
-              <a href="" class="menu-button link --disabled">
+              <a href="" class="menu-button link --disabled active">
                 <span>Menu</span>
                 <img
                   src="./assets/img/coffee-cup.svg"
                   alt="menu-button"
                   width="20"
                   height="20"
-                />
+                >
               </a>
             </div>
           </div>
@@ -113,7 +113,7 @@
           <ul class="products-list">
             <li class="product-card">
               <div class="img-container">
-                <img src="./assets/img/coffee-1.jpg" alt="" />
+                <img src="./assets/img/coffee-1.jpg" alt="" >
               </div>
               <div class="content">
                 <h3 class="product-title">Irish coffee</h3>
@@ -126,7 +126,7 @@
             </li>
             <li class="product-card">
               <div class="img-container">
-                <img src="./assets/img/coffee-2.jpg" alt="" />
+                <img src="./assets/img/coffee-2.jpg" alt="" >
               </div>
               <div class="content">
                 <h3 class="product-title">Kahlua coffee</h3>
@@ -139,7 +139,7 @@
             </li>
             <li class="product-card">
               <div class="img-container">
-                <img src="./assets/img/coffee-3.jpg" alt="" />
+                <img src="./assets/img/coffee-3.jpg" alt="" >
               </div>
               <div class="content">
                 <h3 class="product-title">Honey raf</h3>
@@ -151,7 +151,7 @@
             </li>
             <li class="product-card">
               <div class="img-container">
-                <img src="./assets/img/coffee-4.jpg" alt="" />
+                <img src="./assets/img/coffee-4.jpg" alt="" >
               </div>
               <div class="content">
                 <h3 class="product-title">Ice cappuccino</h3>
@@ -163,7 +163,7 @@
             </li>
             <li class="product-card">
               <div class="img-container">
-                <img src="./assets/img/coffee-5.jpg" alt="" />
+                <img src="./assets/img/coffee-5.jpg" alt="" >
               </div>
               <div class="content">
                 <h3 class="product-title">Espresso</h3>
@@ -173,7 +173,7 @@
             </li>
             <li class="product-card">
               <div class="img-container">
-                <img src="./assets/img/coffee-6.jpg" alt="" />
+                <img src="./assets/img/coffee-6.jpg" alt="" >
               </div>
               <div class="content">
                 <h3 class="product-title">Latte</h3>
@@ -186,7 +186,7 @@
             </li>
             <li class="product-card">
               <div class="img-container">
-                <img src="./assets/img/coffee-7.jpg" alt="" />
+                <img src="./assets/img/coffee-7.jpg" alt="" >
               </div>
               <div class="content">
                 <h3 class="product-title">Latte macchiato</h3>
@@ -198,7 +198,7 @@
             </li>
             <li class="product-card">
               <div class="img-container">
-                <img src="./assets/img/coffee-8.jpg" alt="" />
+                <img src="./assets/img/coffee-8.jpg" alt="" >
               </div>
               <div class="content">
                 <h3 class="product-title">Coffee with cognac</h3>
