--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -24,12 +24,7 @@
             <img src="./assets/img/logo.png" alt="logo" >
           </span>
           <div class="nav-toggle-block">
-            <button class="nav-toggle-button">
-              <svg width="44" height="44" viewBox="0 0 44 44" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <rect x="0.5" y="0.5" width="43" height="43" rx="21.5" stroke="#665F55"/>
-                <path d="M14 18H30" stroke="#403F3D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                <path d="M14 26H30" stroke="#403F3D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>                
+            <button class="nav-toggle-button">              
             </button>
           </div>
           <div class="nav-container">
@@ -458,5 +453,6 @@
         </div>
       </footer>
     </div>
+    <script src="./scripts/script.js"></script>
   </body>
 </html>
