--- a/coffee-house/menu.html
+++ b/coffee-house/menu.html
@@ -81,7 +81,7 @@
         </div>
         <div class="menu-grid">
           <ul class="products-list">
-            <li class="product-card">
+            <!-- <li class="product-card">
               <div class="img-container">
                 <img src="./assets/img/coffee-1.jpg" alt="" >
               </div>
@@ -177,7 +177,7 @@
                 </p>
                 <p class="product-price">$6.50</p>
               </div>
-            </li>
+            </li> -->
           </ul>
         </div>
         <div class="refresh-button-wrapper">
@@ -189,6 +189,56 @@
               </g>
               </svg>      
           </button>
+        </div>
+        <button id="modalOpenButton">Open Popover</button>
+        <div id="menuModal" class="menu-modal">
+          <div class="menu-modal-container">
+            <div class="img-container">
+              <img src="./assets/img/coffee-1.jpg" alt="" >
+            </div>
+            <div class="content">
+              <h3 class="product-title">Irish coffee</h3>
+              <p class="product-description">
+                Fragrant black coffee with Jameson Irish whiskey and whipped
+                milk
+              </p>
+              <div class="tabs size-tabs">
+                <p class="tab-title">Size</p>
+                <ul class="tabs-list">
+                  <li class="tab-item active"><button type="button"><span>S</span>200 ml</button></li>
+                  <li class="tab-item"><button type="button"><span>M</span>300 ml</button></li>
+                  <li class="tab-item"><button type="button"><span>L</span>400 ml</button></li>
+                </ul>
+              </div>
+              <div class="tabs size-tabs">
+                <p class="tab-title">Additives</p>
+                <ul class="tabs-list">
+                  <li class="tab-item"><button type="button"><span>1</span>Sugar</button></li>
+                  <li class="tab-item"><button type="button"><span>2</span>Cinnamon</button></li>
+                  <li class="tab-item"><button type="button"><span>3</span>Syrop</button></li>
+                </ul>
+              </div>
+              <p class="product-price"><span>Total:</span>$7.00</p>
+              <div class="alert">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
+                  <g clip-path="url(#clip0_268_12877)">
+                    <path d="M8 7.66663V11" stroke="#403F3D" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M8 5.00667L8.00667 4.99926" stroke="#403F3D" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M7.99967 14.6667C11.6816 14.6667 14.6663 11.6819 14.6663 8.00004C14.6663 4.31814 11.6816 1.33337 7.99967 1.33337C4.31778 1.33337 1.33301 4.31814 1.33301 8.00004C1.33301 11.6819 4.31778 14.6667 7.99967 14.6667Z" stroke="#403F3D" stroke-linecap="round" stroke-linejoin="round"/>
+                  </g>
+                  <defs>
+                    <clipPath id="clip0_268_12877">
+                      <rect width="16" height="16" fill="white"/>
+                    </clipPath>
+                  </defs>
+                </svg>
+                  <p>
+                    The cost is not final. Download our mobile app to see the final price and place your order. Earn loyalty points and enjoy your favorite coffee with up to 20% discount.
+                  </p>            
+                </div>
+              <button class="button-secondary" id="modalCloseButton">Close</button>
+            </div>
+          </div>
         </div>
       </section>
       <footer class="main-footer" id="contacts">
