--- a/coffee-house/menu.html
+++ b/coffee-house/menu.html
@@ -68,10 +68,10 @@
           <div class="tabs menu-tabs">
             <ul class="tabs-list">
               <li class="tab-item active">
-                <button type="button" data-category="coffee" onclick="handleTabClick(event)" ><span>☕</span>Coffee</button>
+                <button type="button" data-category="coffee" onclick="handleTabClick(event)" ><span onclick="handleSpanClick(event)">☕</span>Coffee</button>
               </li>
               <li class="tab-item">
-                <button type="button" data-category="tea" onclick="handleTabClick(event)" ><span>🫖</span>Tea</button>
+                <button type="button" data-category="tea" onclick="handleTabClick(event)" ><span onclick="handleSpanClick(event)">🫖</span>Tea</button>
               </li>
               <li class="tab-item">
                 <button type="button" data-category="dessert" onclick="handleTabClick(event)" ><span>🍰</span>Dessert</button>
@@ -182,9 +182,8 @@
         </div>
         <div class="load-button-wrapper">
         </div>
-        <button id="modalOpenButton">Open Popover</button>
         <div id="menuModal" class="menu-modal">
-          <div class="menu-modal-container">
+          <!-- <div class="menu-modal-container">
             <div class="img-container">
               <img src="./assets/img/coffee-1.jpg" alt="" >
             </div>
@@ -230,7 +229,7 @@
                 </div>
               <button class="button-secondary" id="modalCloseButton">Close</button>
             </div>
-          </div>
+          </div> -->
         </div>
       </section>
       <footer class="main-footer" id="contacts">
