feat: add video on home page

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -57,6 +57,11 @@
         </div>
       </header>
       <section class="enjoy">
+        <div class="video-wrapper">
+          <video autoplay muted loop>
+            <source src="./assets/video/video.mp4">
+          </video>
+        </div>
         <div class="container">
           <h1 class="heading-primary">
             <span>Enjoy</span> premium coffee at our charming cafe
