feat: add slider functionality

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -118,71 +118,74 @@
           </a>
         </div>
       </section>
-      <section class="favourites-coffee" id="favourites-coffee">
-        <h2 class="heading-secondary">
-          Choose your <span>favorite</span> coffee
-        </h2>
-        <div class="slider">
-          <ul class="list">
-            <li class="item">
-              <div class="content">
-                <img src="./assets/img/coffee-slider-1.png" alt="" >
-                <h3 class="product-title">S’mores Frappuccino</h3>
-                <p class="product-description">
-                  This new drink takes an espresso and mixes it with brown sugar
-                  and cinnamon before being topped with oat milk.
-                </p>
-                <p class="product-price">$5.50</p>
-              </div>
-            </li>
-          </ul>
-          <div class="arrows">
-            <div class="control left">
-              <button type="button" class="arrow --prev left">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="24"
-                  height="24"
-                  viewBox="0 0 24 24"
-                  fill="none"
-                >
-                  <path
-                    d="M18.5 12H6M6 12L12 6M6 12L12 18"
-                    stroke="#403F3D"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  />
-                </svg>
-              </button>
+      <section class="favourites-coffee">
+        <div class="slider-block">
+            <ul class="list">
+                <li class="item slide">
+                    <img class="slide-image" src="./assets/img/coffee-slider-1.png" alt="">
+                    <div class="slide-content">
+                        <h3 class="product-title">S’mores Frappuccino 1</h3>
+                        <p class="product-description">
+                            This new drink takes an espresso and mixes it with brown sugar
+                            and cinnamon before being topped with oat milk.
+                        </p>
+                        <p class="product-price">$5.50</p>
+                    </div>
+                </li>
+                <li class="item slide">
+                    <img class="slide-image" src="./assets/img/coffee-slider-1.png" alt="">
+                    <div class="slide-content">
+                        <h3 class="product-title">S’mores Frappuccino 2</h3>
+                        <p class="product-description">
+                            This new drink takes an espresso and mixes it with brown sugar
+                            and cinnamon before being topped with oat milk.
+                        </p>
+                        <p class="product-price">$5.50</p>
+                    </div>
+                </li>
+                <li class="item slide">
+                    <img class="slide-image" src="./assets/img/coffee-slider-1.png" alt="">
+                    <div class="slide-content">
+                        <h3 class="product-title">S’mores Frappuccino 3</h3>
+                        <p class="product-description">
+                            This new drink takes an espresso and mixes it with brown sugar
+                            and cinnamon before being topped with oat milk.
+                        </p>
+                        <p class="product-price">$5.50</p>
+                    </div>
+                </li>
+            </ul>
+            <div class="arrows">
+                <div class="control left">
+                    <button type="button" class="arrow --prev left">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                            <path d="M18.5 12H6M6 12L12 6M6 12L12 18" stroke="#403F3D" stroke-linecap="round"
+                                  stroke-linejoin="round"></path>
+                        </svg>
+                    </button>
+                </div>
+                <div class="control right">
+                    <button type="button" class="arrow --next right">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                            <path d="M6 12H18.5M18.5 12L12.5 6M18.5 12L12.5 18" stroke="#403F3D" stroke-linecap="round"
+                                  stroke-linejoin="round"></path>
+                        </svg>
+                    </button>
+                </div>
             </div>
-            <div class="control right">
-              <button type="button" class="arrow --next right">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="24"
-                  height="24"
-                  viewBox="0 0 24 24"
-                  fill="none"
-                >
-                  <path
-                    d="M6 12H18.5M18.5 12L12.5 6M18.5 12L12.5 18"
-                    stroke="#403F3D"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  />
-                </svg>
-              </button>
+            <div class="progress-bar">
+                <span class="progress-control">
+                    <span class="loader"></span>
+                </span>
+                <span class="progress-control">
+                    <span class="loader"></span>
+                </span>
+                <span class="progress-control">
+                    <span class="loader"></span>
+                </span>
             </div>
-          </div>
-          <div class="progress-bar">
-            <div class="container">
-              <span class="progress-control active"></span>
-              <span class="progress-control"></span>
-              <span class="progress-control"></span>
-            </div>
-          </div>
         </div>
-      </section>
+    </section>
       <section class="about" id="about">
         <h2 class="heading-secondary">
           Resource is <span>the perfect and cozy place</span> where you can
