--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -461,6 +461,10 @@
         </div>
       </footer>
     </div>
-    <script src="./scripts/script.js"></script>
+    <script src="./scripts/fetchData.js"></script>
+    <script src="./scripts/burgerMenu.js"></script>
+    <script src="./scripts/slider.js"></script>
+    <!-- <script src="./scripts/script.js"></script>
+    <script src="./scripts/script.js"></script> -->
   </body>
 </html>
